# global-agent-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
contracts/mcp/v1/: discovery.json  errors.json
contracts/mcp/v1/examples/: calls.json
contracts/mcp/v1/prompts/: investigate_previous_bug.json  prepare_implementation_handoff.json  prepare_project_context.json  review_memory_candidates.json  review_recent_decisions.json  (+1 more)
dashboard/: .npmrc  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  main.tsx  styles.css  types.ts
dashboard/src/hooks/: use-dashboard.ts
dashboard/src/lib/: api.ts  fixtures.ts  format.ts
dashboard/src/test/: setup.ts
docs/: architecture.md  claude-code.md  codex.md  configuration.md  global-memory-implementation-plan(1).md  mcp-contract-v1.md  operations.md  performance-baseline.md  phase-checklist.md  release-checklist-v1.md  testing.md
docs/adr/: 0001-mcp-only-public-api.md  0002-no-custom-rest-api.md  0003-optional-semantic-adapters.md  0004-self-contained-discovery-schemas.md
docs/phases/: phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md
integrations/claude-code/: CLAUDE.md.snippet
integrations/codex/: AGENTS.md.snippet
integrations/skills/gam-context/: SKILL.md
integrations/skills/gam-dashboard/: SKILL.md
integrations/skills/gam-remember/: SKILL.md
integrations/skills/gam-review/: SKILL.md
integrations/skills/gam-search/: SKILL.md
integrations/skills/global-memory/: SKILL.md
scripts/: generate_contract.py
src/global_memory/: __init__.py  cli.py  config.py  dashboard.py  errors.py  operations.py
src/global_memory/_dashboard/: index.html
src/global_memory/access/: __init__.py  service.py
src/global_memory/application/: __init__.py  diagnostics_service.py  memory_service.py  project_service.py
src/global_memory/cli/: __init__.py  __main__.py  application.py
src/global_memory/config/: __init__.py  settings.py
src/global_memory/dashboard/: __init__.py  routes.py
src/global_memory/domain/: __init__.py  lifecycle.py  models.py  protocols.py
src/global_memory/embeddings/: __init__.py  base.py  fake.py  ollama.py
src/global_memory/errors/: __init__.py
src/global_memory/index/: __init__.py  chunks.py  database.py  embedding_indexer.py  indexer.py  jobs.py  mutations.py  vectors.py  watcher.py
src/global_memory/integrations/: __init__.py  manager.py  verify.py
src/global_memory/logging/: __init__.py  configuration.py
src/global_memory/mcp/: __init__.py  client.py  contract.py  daemon.py  daemon_control.py  server.py  stdio_proxy.py
src/global_memory/operations/: __init__.py  backups.py  native_services.py  packages.py
src/global_memory/projects/: __init__.py  detector.py  git.py  models.py  registry.py
src/global_memory/retrieval/: __init__.py  context.py  pagination.py  ranking.py  search.py
src/global_memory/security/: __init__.py  secrets.py
src/global_memory/vault/: __init__.py  initialize.py  markdown.py  obsidian.py  paths.py  repository.py
tests/: __init__.py
tests/contract/: test_contract_files.py  test_mcp_server.py  test_skill.py
tests/e2e/: __init__.py  test_daemon_control.py  test_transport_placeholder.py  test_transports.py  test_v1_acceptance.py  test_wheel_install.py
tests/integration/: test_access_control.py  test_cli_baseline.py  test_diagnostics.py  test_indexing.py  test_integrations.py  test_lifecycle_service.py  test_projects.py  test_recovery_jobs.py  test_retrieval.py  test_semantic_index.py  test_upgrade_migration.py
tests/performance/: test_regression.py
tests/unit/: test_chunking.py  test_cli_runtime_routes.py  test_cli_setup.py  test_config_and_init.py  test_dashboard.py  test_domain_and_markdown.py  test_embeddings.py  test_obsidian_assets.py  test_operations.py  test_package.py  test_project_git.py  test_retrieval_primitives.py  test_security.py  test_stdio_proxy.py  test_vault_repository.py
(+56 files in other folders)
